--- a/Device Interface Manager/Theme/MenuButtonTheme.xaml
+++ b/Device Interface Manager/Theme/MenuButtonTheme.xaml
@@ -10,7 +10,6 @@
                         <Grid VerticalAlignment="Stretch"
                               HorizontalAlignment="Stretch"
                               Height="50"
-                              Cursor="Hand"
                               Background="{TemplateBinding Background}">
 
                             <TextBlock Text="{TemplateBinding Property=Content}"
@@ -25,11 +24,14 @@
 
             <Setter Property="Background" Value="Transparent"/>
             <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="IsTabStop" Value="False"/>
+            <Setter Property="Cursor" Value="Hand"/>
         </Style.Setters>
 
         <Style.Triggers>
             <Trigger Property="IsChecked" Value="True">
                 <Setter Property="Background" Value="#22202F"/>
+                <Setter Property="IsTabStop" Value="False"/>
             </Trigger>
             <MultiTrigger>
                 <MultiTrigger.Conditions>
